--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,3 +120,10 @@
     @apply bg-background text-foreground;
   }
 }
+
+html > body[data-scroll-locked] {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+}
